# geovista-slam

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md  issue.md
.github/workflows/: ci-auto-approve.yml  ci-citation.yml  ci-delme.yml  ci-locks.yml  ci-manifest.yml  ci-tests.yml  ci-wheels.yml
requirements/: pypi-core.txt  pypi-dev.txt  pypi-test.txt  slam-py312_linux-64_conda_spec.txt  slam-py312_osx-64_conda_spec.txt  slam.yml  vtk.yml
requirements/locks/: README.md  py310-lock-linux-64.txt  py311-lock-linux-64.txt  py312-lock-linux-64.txt  py38-lock-linux-64.txt  py39-lock-linux-64.txt
scripts/: from_ugrid.py  from_ugrid__fast_solve.py  transform.py  transform__fast_solve.py  transform__methods.py
src/slam/: __init__.py
tests/: conftest.py  test_transform_io.py
