[build-system]
# Defined by PEP 518
requires = [
    "setuptools>=61",
    "setuptools-scm[toml]>=7",
]
# Defined by PEP 517
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Bill Little", email = "bjlittle.pub@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "geovista>=0.2",
    "numpy>=1.23",
    "scitools-iris>=3.2",
]
description = "Structured Local Area Model"
dynamic = [
    "readme",
    "version",
]
keywords = [
    "curvilinear",
    "earth-science",
    "geovista",
    "grid",
    "lam",
    "mesh",
    "python",
    "pyvista",
    "rectilinear",
    "ugrid",
    "unstructured",
    "vtk",
]
license = {text = "BSD-3-Clause"}
name = "geovista-slam"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pre-commit",
]
test = [
    "codecov",
    "pytest>=6.0",
    "pytest-cov",
]

[project.urls]
Code = "https://github.com/bjlittle/geovista-slam"
Issues = "https://github.com/bjlittle/geovista-slam/issues"

[tool.check-manifest]
ignore = [
    "src/slam/_version.py",
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--import-mode=importlib",
    "-ra",
    "--strict-config",
    "--strict-markers",
    "-v",
]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS NUMBER"
filterwarnings = [
    "error",
]
log_cli = "True"
log_cli_level = "INFO"
minversion = "6.0"
testpaths = "tests"
xfail_strict = "True"

[tool.repo-review]
ignore = [
    # https://learn.scientific-python.org/development/guides/packaging-simple#PY004
    "PY004",  # Has docs folder
    # https://learn.scientific-python.org/development/guides/packaging-simple#PY005
    "PY005",  #  Has tests folder
    # https://learn.scientific-python.org/development/guides/tasks#PY007
    "PY007",  # Supports an easy task runner (nox or tox)
    # https://learn.scientific-python.org/development/guides/style#PC140
    "PC140",  # Uses mypy
    # https://learn.scientific-python.org/development/guides/style#PC180
    "PC180",  # Uses prettier
    # https://learn.scientific-python.org/development/guides/style#MY100
    "MY100",  # Uses MyPy (pyproject config)
    # https://learn.scientific-python.org/development/guides/docs#RTD100
    "RTD100", # Uses ReadTheDocs (pyproject config)
]

[tool.ruff]
line-length = 88
src = [
    "src",
]

[tool.ruff.format]
docstring-code-format = true
preview = false

[tool.ruff.lint]
preview = false
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # isort
    "I",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["slam"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 22

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
license-files = ["LICENSE"]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["slam*"]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/slam/_version.py"
local_scheme = "dirty-tag"
version_scheme = "release-branch-semver"
