[metadata]
author = SLAM Contributors
author_email = bjlittle.pub@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science
description = Structured Local Area Model
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    earth-science
    grid
    mesh
    python
    ugrid
    unstructured
license_files = LICENSE
name = slam
project_urls =
    Code = https://github.com/bjlittle/geovista-slam
    Issues = https://github.com/bjlittle/geovista-slam/issues
url = https://github.com/bjlittle/geovista-slam
version = attr: slam.__version__

[options]
include_package_data = True
install_requires =
    appdirs
    geovista
    iris
package_dir =
    =src
packages = find_namespace:
python_requires =
    >=3.8
zip_safe = False 

[options.extras_require]
dev =
    pre-commit
test =
    codecov
    pytest>=6.0
    pytest-cov

[options.packages.find]
where = src
